2008-05-02  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoPermissions.[hm]: removed the "Save Acls"
	permission since its purposes matches SOPE's "Change Permissions".

	* SoObjects/SOGo/SOGoGCSFolder.m ([SOGoGCSFolder
	+webdavAclManager]): new overriden method.

	* SoObjects/SOGo/SOGoParentFolder.m ([SOGoParentFolder
	+webdavAclManager]): new overriden method.

	* UI/MailPartViewers/UIxMailPartTextViewer.m (convertChars): do
	not cast pointers to unsigned int to avoid problems with big
	endian archs.

	* SoObjects/Contacts/SOGoContactLDAPFolder.m ([-davNamespaces]):
	removed method.

	* SoObjects/Contacts/SOGoContactGCSFolder.m ([-davNamespaces]):
	removed method.

	* SoObjects/SOGo/SOGoGCSFolder.m ([SOGoGCSFolder
	+webdavAclManager]): new overriden method.

	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder +webdavAclManager]):
	new overriden method.

	* SoObjects/Appointments/SOGoAppointmentObject.m
	([SOGoAppointmentObject +webdavAclManager]): new overriden method.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder +webdavAclManager]): new overriden method.
	([-davNamespaces]): removed method.
	([-lookupGroupFolderForUIDs:_uidsinContext:])
	([-lookupGroupCalendarFolderForUIDs:_uidsinContext:_ctx]):
	disabled methods.

	* SoObjects/SOGo/SOGoWebDAVAclManager.[hm]: new class module that
	implements the rendering of DAV acl trees as well as their mapping
	from SOGo permissions.

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject +initialize]): libSOGo
	is now a framework, so we can simplify the loading of the DAVReportMap.
	([-lookupGroupsFolder]): disabled method.
	([SOGoObject -davOwner], [SOGoObject -davAclRestrictions])
	([SOGoObject -davPrincipalCollectionSet])
	([SOGoObject -davCurrentUserPrivilegeSet])
	([SOGoObject -davSupportedPrivilegeSet], [SOGoObject -davAcl])
	([SOGoObject -davPrincipalMatch:localContext])
	([SOGoObject -davSupportedReportSet]): (re-)implemented dav
	methods with our new dav rendering paradigm.