@@ -556,106 +556,15 @@
   return cos;
 }
 
+- (NSString *) davDisplayName
+{
+  return [[LDAPUserManager sharedUserManager]
+	   getCNForUID: nameInContainer];
+}
+
 - (BOOL) davIsCollection
 {
   return YES;
 }
-
-// /* CalDAV support */
-// - (NSArray *) davCalendarHomeSet
-// {
-//   /*
-//     <C:calendar-home-set xmlns:D="DAV:"
-//         xmlns:C="urn:ietf:params:xml:ns:caldav">
-//       <D:href>http://cal.example.com/home/bernard/calendars/</D:href>
-//     </C:calendar-home-set>
-
-//     Note: this is the *container* for calendar collections, not the
-//           collections itself. So for use its the home folder, the
-// 	  public folder and the groups folder.
-//   */
-//   NSArray *tag;
-//   SOGoAppointmentFolders *parent;
-
-//   parent = [self privateCalendars: @"Calendar" inContext: context];
-//   tag = [NSArray arrayWithObjects: @"href", @"DAV:", @"D",
-//                  [parent davURL], nil];
-
-//   return [NSArray arrayWithObject: tag];
-// }
-
-// - (NSArray *) davCalendarUserAddressSet
-// {
-//   NSArray *tag, *allEmails;
-//   NSMutableArray *addresses;
-//   NSEnumerator *emails;
-//   NSString *currentEmail;
-
-//   addresses = [NSMutableArray array];
-
-//   allEmails = [[context activeUser] allEmails];
-//   emails = [allEmails objectEnumerator];
-//   while ((currentEmail = [emails nextObject]))
-//     {
-//       tag = [NSArray arrayWithObjects: @"href", @"DAV:", @"D",
-// 		     [NSString stringWithFormat: @"MAILTO:%@", currentEmail],
-// 		     nil];
-//       [addresses addObject: tag];
-//     }
-
-//   return addresses;
-// }
-
-// - (NSArray *) davCalendarScheduleInboxURL
-// {
-//   NSArray *tag;
-//   SOGoAppointmentFolders *parent;
-
-//   parent = [self privateCalendars: @"Calendar" inContext: context];
-//   tag = [NSArray arrayWithObjects: @"href", @"DAV:", @"D",
-//                  [NSString stringWithFormat: @"%@personal/", [parent davURL]],
-// 		 nil];
-
-//   return [NSArray arrayWithObject: tag];
-// }
-
-// - (NSString *) davCalendarScheduleOutboxURL
-// {
-//   NSArray *tag;
-//   SOGoAppointmentFolders *parent;
-
-//   parent = [self privateCalendars: @"Calendar" inContext: context];
-//   tag = [NSArray arrayWithObjects: @"href", @"DAV:", @"D",
-//                  [NSString stringWithFormat: @"%@personal/", [parent davURL]],
-// 		 nil];
-
-//   return [NSArray arrayWithObject: tag];
-// }
-
-// - (NSString *) davDropboxHomeURL
-// {
-//   NSArray *tag;
-//   SOGoAppointmentFolders *parent;
-
-//   parent = [self privateCalendars: @"Calendar" inContext: context];
-//   tag = [NSArray arrayWithObjects: @"href", @"DAV:", @"D",
-//                  [NSString stringWithFormat: @"%@personal/", [parent davURL]],
-// 		 nil];
-
-//   return [NSArray arrayWithObject: tag];
-// }
-
-// - (NSString *) davNotificationsURL
-// {
-//   NSArray *tag;
-//   SOGoAppointmentFolders *parent;
-
-//   parent = [self privateCalendars: @"Calendar" inContext: context];
-//   tag = [NSArray arrayWithObjects: @"href", @"DAV:", @"D",
-//                  [NSString stringWithFormat: @"%@personal/", [parent davURL]],
-// 		 nil];
-
-//   return [NSArray arrayWithObject: tag];
-// }
 
 @end /* SOGoUserFolder */
